# InfiniTAM

./: .gitignore  CMakeLists.txt  InfiniTAM.sln  LICENSE  README  README.md  build-nix.sh  build-win.sh  package.xml  require-msbuild.sh
Apps/InfiniTAM_cli/: CLIEngine.cpp  CLIEngine.h  CMakeLists.txt
InfiniTAM/: .vimrc  CMakeLists.txt  Doxyfile  InfiniTAM.cpp  InfiniTAM.vcxproj  InfiniTAM.vcxproj.filters  InfiniTAM_cli.cpp  build-nix.sh  build-realsense-win.sh  build-win.sh  require-msbuild.sh
InfiniTAM/Apps/: CMakeLists.txt
InfiniTAM/Apps/InfiniTAM/: CMakeLists.txt  InfiniTAM.cpp  InfiniTAM_ROS.cpp  UIEngine.cpp  UIEngine.h
InfiniTAM/Apps/InfiniTAM_cli/: CLIEngine.cpp  CLIEngine.h  CMakeLists.txt  InfiniTAM_cli.cpp
InfiniTAM/Apps/android/: README  build.xml
InfiniTAM/Engine/: Android.mk  CLIEngine.cpp  CLIEngine.h  CMakeLists.txt  FFMPEGReader.cpp  FFMPEGWriter.cpp  IMUSourceEngine.cpp  IMUSourceEngine.h  ImageSourceEngine.cpp  ImageSourceEngine.h  Kinect2Engine.cpp  Kinect2Engine.h  LibUVCEngine.cpp  LibUVCEngine.h  OpenNIEngine.cpp  OpenNIEngine.h  PicoFlexxEngine.cpp  PicoFlexxEngine.h  RealSenseEngine.cpp  RealSenseEngine.h  UIEngine.cpp  UIEngine.h
InfiniTAM/FernRelocLib/: CMakeLists.txt  FernConservatory.cpp  FernConservatory.h  PixelUtils.h  PoseDatabase.cpp  PoseDatabase.h  RelocDatabase.cpp  RelocDatabase.h  Relocaliser.cpp  Relocaliser.h
InfiniTAM/Files/PrimeSense/: calib.txt
InfiniTAM/Files/Teddy/: calib.txt
InfiniTAM/ITMLib/: Android.mk  CMakeLists.txt  CPUInstantiations.cpp  CUDAInstantiations.cu  ITMLib.h  ITMLibDefines.h
InfiniTAM/ITMLib/Camera/: ITMCalibIO.h  ITMDisparityCalib.h  ITMPose.h
InfiniTAM/ITMLib/Core/: CPUInstantiations.cpp  CUDAInstantiations.cu  ITMActiveSceneManager.cpp  ITMActiveSceneManager.h  ITMBasicEngine.cpp  ITMBasicEngine.h  ITMBasicEngine.tpp  ITMBasicSurfelEngine.h  ITMBasicSurfelEngine.tpp  ITMDenseMapper.cpp  ITMDenseMapper.h  ITMDenseMapper.tpp  ITMDenseSurfelMapper.cpp  ITMDenseSurfelMapper.h  ITMDenseSurfelMapper.tpp  ITMLibDefines.h  ITMLocalScene.cpp  ITMLocalScene.h  ITMLocalSceneManager.cpp  ITMLocalSceneManager.h  ITMLocalSceneManager.tpp  ITMMainEngine.h  ITMMultiEngine.cpp  ITMMultiEngine.h  ITMMultiEngine.tpp  ITMTrackingController.cpp  ITMTrackingController.h  ITMVoxelTypes.h
InfiniTAM/ITMLib/Engine/: ITMActiveSceneManager.cpp  ITMActiveSceneManager.h  ITMBasicEngine.cpp  ITMBasicEngine.h  ITMBlockProjectionEngine.h  ITMColorTracker.cpp  ITMColorTracker.h  ITMCompositeTracker.h  ITMDenseMapper.cpp  ITMDenseMapper.h  ITMDenseSurfelMapper.cpp  ITMDenseSurfelMapper.h  ITMDepthTracker.cpp  ITMDepthTracker.h  ITMIMUCalibrator.h  ITMIMUTracker.cpp  ITMIMUTracker.h  ITMLowLevelEngine.h  ITMMainEngine.cpp  ITMMainEngine.h  ITMMeshingEngine.h  ITMMultiEngine.cpp  ITMMultiEngine.h  ITMRenTracker.cpp  ITMRenTracker.h  ITMSceneReconstructionEngine.h  ITMSurfelSceneReconstructionEngine.cpp  ITMSurfelSceneReconstructionEngine.h  ITMSurfelSceneReconstructionEngineFactory.cpp  ITMSurfelSceneReconstructionEngineFactory.h  ITMSurfelVisualisationEngine.cpp  ITMSurfelVisualisationEngine.h  ITMSurfelVisualisationEngineFactory.cpp  ITMSurfelVisualisationEngineFactory.h  ITMSwappingEngine.h  ITMTracker.h  ITMTrackerCollection.h  ITMTrackerFactory.cpp  ITMTrackerFactory.h  ITMTrackingController.cpp  (+8 more)
InfiniTAM/ITMLib/Objects/: ITMDisparityCalib.cpp  (+38 more)
InfiniTAM/InputSource/: Android.mk  CMakeLists.txt  CompositeImageSourceEngine.cpp  CompositeImageSourceEngine.h  FFMPEGReader.cpp  FFMPEGReader.h  FFMPEGWriter.cpp  FFMPEGWriter.h  IMUSourceEngine.cpp  IMUSourceEngine.h  IdleImageSourceEngine.cpp  IdleImageSourceEngine.h  ImageSourceEngine.cpp  ImageSourceEngine.h  Kinect2Engine.cpp  Kinect2Engine.h  LibUVCEngine.cpp  LibUVCEngine.h  OpenNIEngine.cpp  OpenNIEngine.h  PicoFlexxEngine.cpp  PicoFlexxEngine.h  ROSEngine.cpp  ROSEngine.h  RealSense2Engine.cpp  RealSense2Engine.h  RealSenseEngine.cpp  RealSenseEngine.h
InfiniTAM/LCDLib/: Android.mk  CMakeLists.txt  FernConservatory.cpp  FernConservatory.h  LCDDatabase.cpp  LCDDatabase.h  LoopClosureDetectionEngine.cpp  LoopClosureDetectionEngine.h  LoopClosureDetector.cpp  LoopClosureDetector.h  PoseDatabase.cpp  PoseDatabase.h
InfiniTAM/MiniSlamGraphLib/: CMakeLists.txt  GraphEdgeSE3.cpp  LevenbergMarquardtMethod.cpp  MatrixWrapper.cpp  MatrixWrapper.h  ParameterIndex.h  PoseGraph.cpp  QuaternionHelpers.cpp  QuaternionHelpers.h  SlamGraph.h  SlamGraphErrorFunction.cpp  SlamGraphErrorFunction.h  SparseBlockMatrix.h  VariableLengthVector.h
InfiniTAM/ORUtils/: Android.mk  CMakeLists.txt  CUDADefines.h  Cholesky.h  Dummy.cpp  FileUtils.cpp  FileUtils.h  HomkerMap.h  Image.h  KeyValueConfig.cpp  KeyValueConfig.h  LexicalCast.h  MathUtils.h  Matrix.h  MemoryBlock.h  MemoryBlockPersister.h  MemoryDeviceType.h  MetalContext.h  MetalContext.mm  PlatformIndependence.h  SE3Pose.cpp  SE3Pose.h  SVMClassifier.h  Vector.h
InfiniTAM/RelocLib/: CMakeLists.txt  FernConservatory.cpp  FernConservatory.h  PoseDatabase.cpp  PoseDatabase.h  RelocDatabase.cpp  RelocDatabase.h  Relocaliser.cpp  Relocaliser.h
InfiniTAM/Utils/: Android.mk  CMakeLists.txt  FileUtils.cpp  FileUtils.h  NVTimer.h
InfiniTAM/android/: .gitignore  AndroidManifest.xml  README
InfiniTAM/cmake/: CUDACheckCompute.cmake  FindLibRoyale.cmake  FindOpenNI.cmake  FindRealSense.cmake  Flags.cmake  LinkFFmpeg.cmake  LinkGLUT.cmake  LinkLibRoyale.cmake  LinkOpenNI.cmake  LinkPNG.cmake  LinkRealSense.cmake  LinkUVC.cmake  OfferC++11Support.cmake  SetCUDAAppTarget.cmake  SetCUDALibTarget.cmake  SetInstallTarget.cmake  SetLibTarget.cmake  SetUninstallTarget.cmake  UseCUDA.cmake  UseFFmpeg.cmake  UseGLUT.cmake  UseOpenGL.cmake  UseOpenMP.cmake  UseOpenNI.cmake  UsePNG.cmake  UseRealSense.cmake  UseRealSense2.cmake  UseUVC.cmake  cmake_uninstall.cmake.in  cuda_compute_capability.c  cuda_compute_capability.cpp
MiniSlamGraphLib/: CMakeLists.txt  GraphEdge.cpp  GraphEdge.h  GraphEdgeSE3.h  GraphNode.h  GraphNodeSE3.h  LevenbergMarquardtMethod.h  Matrix_CSparse.h  PoseGraph.h  QuaternionHelpers.cpp  SlamGraph.cpp  SparseRegularBlockMatrix.h
(+676 files in other folders)
