<?xml version="1.0"?>
<package format="2">
  <name>InfiniTAM</name>
  <version>3.0.0</version>
  <description>InfiniTAM ROS package</description>

  <maintainer email="ravich3141@gmail.com">ravich</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

</package>
